# MPAlloy

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
alloy/: CMakeLists.txt
alloy/elastic_tensor/: manager.py
alloy/include/alloy/: async_pipeline.cuh  elastic_migrate.cuh  mixed_precision_kernels.cuh  tiered_cache.cuh  vectorized_ops.cuh
alloy/mixed_precision/: gradient_verifier.py
alloy/scheduler/: tiered_placement.py
alloy/src/: tiered_embedding.cu
core/hypereca/: .gitignore  CMakeLists.txt  README.md
core/hypereca/benchmarks/: .gitignore  CMakeLists.txt  combine_ops.cu  common.h  copy.cu  dedup.cc  dedup_combine.cu  hugectr-reader.cu  insert.cc  prefetch.cc
core/hypereca/benchmarks/hugectr/: LICENSE-HugeCTR-v2  check_none.hpp  check_sum.hpp  checker.hpp  common.hpp  file_source.hpp  hugectr_utils.hh  source.hpp
core/hypereca/include/dress/: combine_ops.h  config.h  context.h  dedup.h  dress.h  embedding.h  logging.h  optimizer.h  profiler.h  spec.h  tensor.h
core/hypereca/interfaces/cmake/: FindDRESS.cmake
core/hypereca/interfaces/hugectr/: README.md  dress.cu  dress_embedding.hpp  dress_util.hpp  v2.2.patch
core/hypereca/src/: config.cc  context.cu  logging.cc  profiler.cc  tensor.cc  thread_pool.hh
core/hypereca/src/embeddings/: embedding.cc  hash_embedding.cc  hash_embedding.h  host_embedding.cc  host_embedding.h  host_embedding_server.cc  host_embedding_server.h  hypra_embedding.cu  hypra_embedding.h  index_kernels.cuh  naive_embedding.cc  naive_embedding.h  naive_embedding_server.cc  naive_embedding_server.h
core/hypereca/src/ops/: combine_ops.cc  combine_ops.cu  combine_ops_impl.cuh  combine_ops_impl.hh  dedup.cc  dedup_impl.hh  initializer.h
core/hypereca/src/optimizers/: optimizer.cc  sgd.cc  sgd.cu  sgd.h
core/hypereca/tests/: CMakeLists.txt  hello_test.cc  lookup_test.cc  pull_test.cc  push_test.cc  reshard_test.cc
core/mtuner/: README.md  plot_figure8.ipynb  profile.sh
core/mtuner/ds_output/: result_modelsize13_seq1024.txt  result_modelsize13_seq2048.txt  result_modelsize13_seq4096.txt  result_modelsize13b_seq8192.txt  result_modelsize30_seq1024.txt  result_modelsize30_seq2048.txt  result_modelsize30_seq4096.txt  result_modelsize30_seq8192.txt  result_modelsize70_seq1024.txt  result_modelsize70_seq2048.txt  result_modelsize70_seq4096.txt  result_modelsize70_seq8192.txt  result_modelsize7_seq1024.txt  result_modelsize7_seq2048.txt  result_modelsize7_seq4096.txt  result_modelsize7_seq8192.txt
core/mtuner/fsdp_output/: result_modelsize13_seq1024.txt  result_modelsize13_seq2048.txt  result_modelsize13_seq4096.txt  result_modelsize13_seq8192.txt  result_modelsize30_seq1024.txt  result_modelsize30_seq2048.txt  result_modelsize30_seq4096.txt  result_modelsize30_seq8192.txt  result_modelsize70_seq1024.txt  result_modelsize70_seq2048.txt  result_modelsize7_seq1024.txt  result_modelsize7_seq2048.txt  result_modelsize7_seq4096.txt  result_modelsize7_seq8192.txt
core/mtuner/mTuner-FSDP/: run_ds.sh  run_fsdp.sh
docs/: claude1_review_m001_m003.md  claude2_review_m004_m006.md  claude3_review_m007_m009.md  claude4_review_m088_m090.md  nips_review_and_dev_plan.md
experiments/: generate_alloy_data.py  run_hetero_integration.py
experiments/exp1_tiered_placement/: run_baseline.py
experiments/exp2_mixed_precision_convergence/: run_convergence.py
experiments/exp3_elastic_migration/: run_migration_bench.py
scripts/: run_exp1.sh  run_exp2.sh  run_exp3.sh  run_hetero_test.sh
